internal cleanups